src/snapshots/eww_config__lexer__test-2.snap
---
source: src/lexer.rs
expression: "LexIterator{pos: 0,\n            source:\n                r#\"(foo { \"}\" })\"#.to_string(),}.map(|x|\n                                                         x.1).collect::<Vec<_>>()"

---
[
    LPren,
    Symbol(
        "foo",
    ),
    SimplExpr(
        " \"}\" ",
    ),
    RPren,
]
