src/snapshots/eww_config__lexer__test-6.snap
---
source: src/lexer.rs
expression: "LexIterator{pos: 0,\n            source:\n                \"(1 :foo 1)\".to_string(),}.map(|x| x.1).collect::<Vec<_>>()"

---
[
    LPren,
    NumLit(
        "1",
    ),
    Keyword(
        ":foo",
    ),
    NumLit(
        "1",
    ),
    RPren,
]
