src/snapshots/eww_config__lexer__test.snap
---
source: src/lexer.rs
expression: "LexIterator{pos: 0,\n            source:\n                r#\"(test \"h\\\"i\")\"#.to_string(),}.map(|x|\n                                                         x.1).collect::<Vec<_>>()"

---
[
    LPren,
    Symbol(
        "test",
    ),
    StrLit(
        "\"h\\\"i\"",
    ),
    RPren,
]
